--- a/2021/Properties/launchSettings.json
+++ b/2021/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "2021": {
       "commandName": "Project",
-      "workingDirectory": "C:\\Projects\\advent_of_code\\2021"
+      "workingDirectory": "."
     }
   }
 }
